css/main.css
@import url(http://fonts.googleapis.com/css?family=Montserrat|Crimson+Text);
* {
  box-sizing: border-box;
  line-height: 1.4em;
}

*:after {
  box-sizing: border-box;
  content: '';
}

*:before {
  box-sizing: border-box;
  content: '';
}

article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, section, summary {
  display: block;
}

html {
  font-size: 100%;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  font-size: 1em;
  line-height: 1.4em;
  text-rendering: optimizelegibility;
  -webkit-tap-highlight-color: transparent;
  -webkit-backface-visibility: hidden;
}

body {
  color: rgba(0, 0, 0, 0.75);
  background: #F1F1E4;
  margin: 0;
  font: 18px/20px "Crimson Text", serif;
  font-smooth: always;
  -webkit-font-smoothing: subpixel-antialiased;
  text-rendering: optimizelegibility;
}

/* Anchors */
a {
  color: #DC3535;
  text-decoration: none;
  text-rendering: optimizelegibility;
  outline: 0;
}

a:focus, a:active, a:hover {
  outline: 0;
}

/* Typography */
h1, h2, h3, h4, h5, h6 {
  margin: 0;
}

h1 {
  font-size: 280%;
  font-weight: normal;
}

h2 {
  font-size: 200%;
  font-weight: normal;
}

h3 {
  font-size: 150%;
}

h4 {
  font-size: 125%;
}

h5 {
  font-size: 110%;
}

h6 {
  font-size: 100%;
}

b, strong {
  font-weight: bold;
}

hr {
  -moz-box-sizing: content-box;
  box-sizing: content-box;
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #eaeaea;
  margin: 1em 0;
  padding: 0;
}

p {
  margin: .8em 0;
}

menu, ul, ol {
  margin: 0;
  padding: 0;
}

menu, ul {
  list-style-image: none;
  list-style: none;
}

nav ul {
  list-style: none;
  list-style-image: none;
}

img {
  border: 0;
  -ms-interpolation-mode: bicubic;
}

/* --- Psuedo classes ----*/
::-webkit-input-placeholder {
  /* WebKit browsers */
  color: #444;
  font-size: 16px;
}

:-moz-placeholder {
  /* Mozilla Firefox 4 to 18 */
  color: #444;
  font-size: 16px;
}

::-moz-placeholder {
  /* Mozilla Firefox 19+ */
  color: #444;
  font-size: 16px;
}

:-ms-input-placeholder {
  /* Internet Explorer 10+ */
  color: #444;
  font-size: 16px;
}

::-moz-selection {
  background: #f05;
  color: #fff;
  text-shadow: none;
}

::selection {
  background: #f05;
  color: #fff;
  text-shadow: none;
}

::selection:window-inactive {
  background: #eaeaea;
  color: #000;
}

input:-webkit-autofill {
  -webkit-box-shadow: 0 0 1000px #FBFBFB inset;
}



/* ----- Header CSS -----------*/
header {
  background-image: linear-gradient(rgba(255, 255, 255, 0.2), rgba(0, 0, 0, 0.1));
  background-color: #4900ed;
  animation: rgb 60s infinite alternate;
  z-index: 1;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 190px;
  padding-top: 30px;
  text-align: center;
  -webkit-transition: .2s;
  -moz-transition: .2s;
  transition: .2s;
}

header .headerPic {
  -webkit-transition: .2s;
  -moz-transition: .2s;
  transition: .2s;
}

header .navPic {
  position: absolute;
  top: 1px;
  left:20px;
  opacity: 0;
  -webkit-transition: .3s;
  -moz-transition: .3s;
  transition: .3s;
}

@keyframes rgb {
  10% {
    background-color: #EE6B02;
  }
  20% {
    background-color: #EE0602;
  }
  30% {
    background-color: #EE0276;
  }
  40% {
    background-color: #9e02EE;
  }
  50% {
    background-color: #022Cee;
  }
  60% {
    background-color: #029dEE;
  }
  70% {
    background-color: #02EEaa;
  }
  80% {
    background-color: #02ee18;
  }
  90% {
    background-color: #43ee02;
  }
  100% {
    background-color: #a8ee02;
  }
}

/* Github ribbon */
.ribbon-wrap {
  position: fixed;
  width: 275px;
  -ms-transform: rotate(-45deg);
  -webkit-transform: rotate(-45deg);
  transform: rotate(-45deg);
  border-color: #a00;
  border-left: 35px solid transparent;
  border-right: 35px solid transparent;
  border-bottom: 35px solid #a00;
  box-shadow: 0px 6px 5px -5px rgba(0, 0, 0, 0.5);
  z-index: 999;
  height: 45px;
}

.ribbon-wrap.right {
  left: inherit;
  right: -55px;
  top: 55px;
  -ms-transform: rotate(45deg);
  -webkit-transform: rotate(45deg);
  transform: rotate(45deg);
}

.ribbon-wrap .trap-ribbon {
  position: absolute;
  left: -28px;
  top: 12px;
  border-bottom: 1px dotted rgba(255, 255, 255, 0.7);
  width: inherit;
  text-align: center;
  height: 32px;
}

.ribbon-wrap .trap-ribbon a {
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 16px;
  font-weight: 700;
  color: #d8d8d8;
  text-decoration: none;
  text-shadow: 0 -1px rgba(0, 0, 0, 0.5);
  text-align: center;
  line-height: 24px;
  display: inline-block;
  border-top: 1px dotted rgba(255, 255, 255, 0.7);
  transition: color 500ms ease;
}

.ribbon-wrap .trap-ribbon a:hover {
  color: #fff;
  text-shadow: 0 1px rgba(0, 0, 0, 0.85);
}

.nav {
  height: 50px;
}

.nav .headerPic {
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  transform: scale(0);
  margin-top: -90px;
}

.nav .navPic {
  opacity: 1;
}

/* -- Footer -- */
.legend {
  justify-content: center;
  align-items: center;
  border-color: #b6daf2;
  background-position: bottom bottom;
  background-repeat: no-repeat;
  width: 100%;
  height: 10vh;
  font-size: 85%;
}

menu.foot-menu li {
  margin: 3px;
}

menu.foot-menu li a {
  font-size: 90%;
  padding: 0 10px;
}

/* ----- Body Container Context -----*/
main {
  margin-top: 190px;
}

section {
  padding: 100px 0px;
  position: relative;
  text-align: center;
}

h1.pitch {
  font-size: 8em;
}

section h2 {
  font-size: 3em;
  margin-bottom: 20px;
}

section p {
  font-size: 1.45em;
}

/* ----- Buttons ------*/
.tryIt {
  width: 250px;
  margin: 20px auto;
  background: #DC3535;
  border-radius: 5px;
  cursor: pointer;
  color: white;
  font-size: 24px;
  padding: 15px 30px;
  transition: all 0.3s;
  font-weight: 700;
  -webkit-transform: translateZ(1px);
}

.tryIt:hover {
  box-shadow: -5px 5px 0 #39393B;
}

/* ----- Uncomplicated single-point media query break, again courtesy: toucaan.css ------*/
@media (max-width: 870px) {
  body .hide-on-mobiles {
    display: none;
  }
  body .display-on-mobiles {
    display: inline-block;
  }
  body .divide-in-half {
    width: 90vw;
  }
  body .one-half {
    width: 100%;
  }
  body .one-third {
    width: 100%;
  }
  body .two-third {
    width: 100%;
  }
  body .shrink {
    width: 95%;
  }
}

@media (min-width: 871px) {
  body .hide-on-mobiles {
    display: marker;
  }
  body .display-on-mobiles {
    display: none;
  }
  body .divide-in-half {
    width: 50vw;
  }
  body .one-half {
    width: 50%;
  }
  body .one-third {
    width: 33.33333%;
  }
  body .two-third {
    width: 66.66666%;
  }
  body .shrink {
    width: 90%;
  }
}

/* --- Resusable classes from Toucaan.css */
.left {
  float: left;
  left: 0;
}

.right {
  float: right;
  right: 0;
}

.center {
  text-align: center;
  margin: 0 auto;
}

.centerize {
  margin: 0 auto;
}

.fixed {
  position: fixed;
}

.absolute {
  position: absolute;
}

.top {
  top: 0;
}

.bottom {
  bottom: 0px;
}

.absolute-center {
  margin: auto;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

.flex {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
}

.fold {
  min-height: calc(90vh - 45px);
  max-width: 100vw;
}

/* -- Push aside, out & away ---*/
.side-gap {
  margin-right: .5em;
  margin-left: .5em;
}

.top-gap {
  margin-top: .5em;
}

.double-top-gap {
  margin-top: 1em;
}

.bottom-gap {
  margin-bottom: 1em;
}

.double-bottom-gap {
  margin-bottom: 2em;
}

.pad {
  padding: 0.5em 1em;
}

.pad-vertically {
  padding: 1em 0;
}

.pad-horizontally {
  padding: 0 1em;
}

/* -- Text --*/
.justify {
  text-align: justify;
}

.uppercase {
  text-transform: uppercase;
}

.lowercase {
  text-transform: lowercase;
}

.italics {
  font-style: italic;
}

.transience {
  transition: all 1s ease 0s;
}

.rotate {
  transform: rotate(180deg);
}

menu.horizontal-list li, ul.horizontal-list li {
  float: left;
}

.sub-list ol li {
  list-style-type: disc;
}

/* ---- Color ----- */
.gray {
  background: #39393b none repeat scroll 0 0;
}

.white-text {
  color: white;
}

/* ----- Typography -----*/
.extra-large {
  font-size: 150%;
  padding: 0.5em 1.6em 0.55em;
}

.large {
  font-size: 120%;
  padding: 0.5em 1.6em 0.55em;
}

.medium {
  font-size: 100%;
  padding: 0.5em 1.4em 0.6em;
}

.standard {
  font-size: 90%;
  padding: 0.4em 1.6em;
}

.small {
  font-size: 80%;
  padding: 0.25em 0.5em 0.4em;
}

.extra-small {
  font-size: 75%;
  padding: .4em 0;
}

.super-small {
  font-size: 70%;
}

.underline {
  text-decoration: underline;
}

.italic {
  font-style: italic;
}

.strike {
  color: #777;
  text-decoration: line-through;
}

.montserrat {
  font-family: 'Montserrat', sans-serif;
}

